--- a/styles/globals.css
+++ b/styles/globals.css
@@ -45,6 +45,7 @@ body::-webkit-scrollbar {
   width: 5px;
 }
 body {
+  overflow-x: hidden;
   scrollbar-width: thin;
   scrollbar-color: var(--thumbBG) var(--scrollbarBG);
 }
