--- a/styles/notion.css
+++ b/styles/notion.css
@@ -112,11 +112,9 @@
   margin-left: -2px;
 }
 
-.nobelium-toggle,
-notion-list {
-  padding: 3px 2px;
-  margin-top: 1px;
-  margin-bottom: 1px;
+.nobelium-toggle {
+  padding: 3px 2px!important;
+  margin: 0!important;
 }
 
 .nobelium-toggle-title {
@@ -124,7 +122,12 @@ notion-list {
 }
 
 .nobelium-toggle-triangle {
-  width: 1.5rem!important;
+  width: 26px!important;
+  height: 26px!important;
+}
+
+.nobelium-toggle > summary {
+  align-items: flex-end!important;
 }
 
 .notion-page-link {
